[package]
name = "osom_lib_hash"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Osom lib implementing a hash_map and hash_set algorithms. And also couple of hash functions."
keywords = ["osom", "lib", "tools", "hash"]

[lib]
crate-type = ["lib"]

[dependencies]
osom_lib_alloc = { path = "../osom_lib_alloc", version = "0.1", default-features = false }
osom_lib_arrays = { path = "../osom_lib_arrays", version = "0.1", default-features = false }
osom_lib_macros = { path = "../osom_lib_macros", version = "0.1", default-features = false }

[features]
default = ["std_alloc"]
std_alloc = []
