[package]
name = "osom_lib_macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Macros for osom projects."
keywords = ["osom", "lib", "macros"]

[lib]
crate-type = ["lib"]

[dev-dependencies]
rstest = { workspace = true }
