[package]
name = "osom_lib_rand"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Osom lib implementation of some random algorithms."
keywords = ["osom", "lib", "tools", "random"]
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
osom_lib_macros = { path = "../osom_lib_macros", version = "0.1" }
getrandom = { version = "0.3", optional = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
default = ["std_rand"]
std_rand = ["getrandom"]

